test_programs/compile_failure/noirc_frontend_tests_enums_match_reachability_errors_ignored_when_there_is_a_type_error/src/main.nr

        fn main() {
            match Opt::Some(3) {
                Opt::None => (),
                Opt::Some(_) => {},
                Opt::None => (),
                3 => (),
            }
        }

        enum Opt<T> {
            None,
            Some(T),
        }
    